--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1> Planets!</h1>
 
-<glx-planeta></glx-planeta>
+<glx-planeta 
+    [nomePlaneta] = "'Terra'";
+    [descricao] = "'Planeta azul com seres humanos e outros animais'";
+    [url] = "''";></glx-planeta>
