--- a/src/app/planeta/planeta.component.html
+++ b/src/app/planeta/planeta.component.html
@@ -1,6 +1,9 @@
 <li>
     <ul>
-        <img src="https://vignette.wikia.nocookie.net/bibliotecamarista/images/a/a7/Planeta_Terra.png/revision/latest?cb=20091118161309&path-prefix=pt-br" alt="Planeta terra" style="width: 200px">
-        <p>Este é o planeta terra!</p>
+	<h2>{{nomePlaneta}}</h2>
+        <img src="{{url}}"
+         alt="{{nomePlaneta}}"
+         style="width: 200px">
+        <p>{{descricao}}</p>
     </ul>
 </li>
