correcao data bind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1> Planets!</h1>
 
 <glx-planeta 
-    [nomePlaneta] = "'Terra'";
-    [descricao] = "'Planeta azul com seres humanos e outros animais'";
-    [url] = "''";></glx-planeta>
+    nomePlaneta = "Terra"
+    descricao = "Planeta azul com seres humanos e outros animais"
+    url = "https://vignette.wikia.nocookie.net/bibliotecamarista/images/a/a7/Planeta_Terra.png/revision/latest?cb=20091118161309&path-prefix=pt-br">
+    Planeta azul com seres humanos e outros animais
+</glx-planeta>
+    
